force-app/main/default/objects/DM_Disbursal_Transaction_Distribution__c/DM_Disbursal_Transaction_Distribution__c.object-meta.xml
<CustomObject>
    <label>DM Disbursal Transaction Distribution</label>
    <nameField>
        <label>DM Disbursal Transaction Distribution Na</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DM Disbursal Transaction Distributions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>