force-app/main/default/objects/DM_Disbursal_Transaction_Distribution__c/fields/DM_ACH_Filename__c.field-meta.xml
<CustomField>
    <fullName>DM_ACH_Filename__c</fullName>
    <label>DM ACH Filename</label>
    <length>255</length>
    <type>Text</type>
</CustomField>