force-app/main/default/objects/DM_Disbursal_Transaction_Distribution__c/fields/DM_Distribution_Amount__c.field-meta.xml
<CustomField>
    <fullName>DM_Distribution_Amount__c</fullName>
    <label>DM Distribution Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>