force-app/main/default/objects/DM_Disbursal_Transaction_Distribution__c/fields/DM_Distribution_Type__c.field-meta.xml
<CustomField>
    <fullName>DM_Distribution_Type__c</fullName>
    <label>DM Distribution Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Disbursement</fullName>
            </value>
            <value>
                <fullName>Pre-Paid Fee</fullName>
            </value>
            <value>
                <fullName>Refinance</fullName>
            </value>
            <value>
                <fullName>Payoff Platform Fee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>