force-app/main/default/objects/DM_Disbursal_Transaction_Distribution__c/fields/DM_External_ID__c.field-meta.xml
<CustomField>
    <fullName>DM_External_ID__c</fullName>
    <externalId>true</externalId>
    <label>DM External ID</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>