force-app/main/default/objects/DM_Disbursal_Transaction_Distribution__c/fields/DM_Loan_Disbursal_Transaction__c.field-meta.xml
<CustomField>
    <fullName>DM_Loan_Disbursal_Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DM Loan Disbursal Transaction</label>
    <referenceTo>DM_Loan_Disbursal_Transaction__c</referenceTo>
    <relationshipLabel>DM Disbursal Transaction Distributions</relationshipLabel>
    <relationshipName>DM_Disbursal_Transaction_Distributions</relationshipName>
    <type>Lookup</type>
</CustomField>