force-app/main/default/objects/DM_Disbursal_Transaction_Distribution__c/fields/DM_Name_of_Entity__c.field-meta.xml
<CustomField>
    <fullName>DM_Name_of_Entity__c</fullName>
    <label>DM Name of Entity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>