force-app/main/default/objects/DM_Disbursal_Transaction_Distribution__c/fields/DM_Sent_To_ACH__c.field-meta.xml
<CustomField>
    <fullName>DM_Sent_To_ACH__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DM Sent To ACH</label>
    <type>Checkbox</type>
</CustomField>