force-app/main/default/objects/DM_Disbursal_Transaction_Distribution__c/fields/DM_Sent_To_ACH_On__c.field-meta.xml
<CustomField>
    <fullName>DM_Sent_To_ACH_On__c</fullName>
    <label>DM Sent To ACH On</label>
    <type>Date</type>
</CustomField>